Fix dark mode in prod && dark mode tweaks

--- a/ui/src/css/extensions/algolia/overrides.css
+++ b/ui/src/css/extensions/algolia/overrides.css
@@ -23,7 +23,7 @@
   --aa-primary-color-alpha: 0.2;
   --aa-muted-color-rgb: 133, 133, 133;
   --aa-muted-color-alpha: 1;
-  --aa-panel-border-color-rgb: 239, 239, 239;
+  --aa-panel-border-color-rgb: 235, 235, 235;
   --aa-panel-border-color-alpha: 1;
   --aa-input-border-color-rgb: 128, 126, 163;
   --aa-input-border-color-alpha: 0.8;
@@ -57,36 +57,14 @@
   }
 }
 
-body.dark,
-body[data-theme=dark],
-html[data-theme='dark'] {
-  --aa-text-color-rgb: 183, 192, 199;
-  --aa-primary-color-rgb: 146, 138, 255;
-  --aa-muted-color-rgb: 204, 204, 204;
-  --aa-input-background-color-rgb: 27, 27, 27;
-  --aa-background-color-rgb: 18, 18, 18;
-  --aa-selected-color-rgb: 146, 138, 255;
-  --aa-selected-color-alpha: 0.25;
-  --aa-description-highlight-background-color-rgb: 0 255 255;
-  --aa-description-highlight-background-color-alpha: 0.25;
-  --aa-icon-color-rgb: 175, 202, 255;
-  /* --aa-panel-shadow: inset 1px 1px 0 0 #2c2e40, 0 3px 8px 0 #000309; */
-  --aa-panel-shadow: none;
-  --aa-scrollbar-track-background-color-rgb: 44, 46, 64;
-  --aa-scrollbar-thumb-background-color-rgb: var(--aa-background-color-rgb);
-  --aa-panel-border-color-rgb: 49, 49, 49;
-  --aa-mark-underline-color: 255, 255, 255;
-}
-
 .aa-Panel {
-  background-color: #fff;
+  background-color: rgba(var(--aa-background-color-rgb), var(--aa-background-color-alpha));
   border-radius: 0px;
   border-radius: 0;
   box-shadow:none;
   box-shadow: none;
   margin: 0 0 0;
   overflow: hidden;
-  position: absolute;
   transition: opacity .2s ease-in, filter .2s ease-in;
   font-size: 14px;
 }
@@ -111,8 +89,8 @@ html[data-theme='dark'] {
   color:white;
 }
 
- .aa-Item[aria-selected=true]   svg{
-      fill: white;
+ .aa-Item[aria-selected=true] svg{
+    fill: white;
 }
 
 .aa-PanelLayout {
@@ -167,7 +145,6 @@ html[data-theme='dark'] {
 .aa-Autocomplete,
 .aa-DetachedFormContainer,
 .aa-Panel {
-  color: #262627;
   color: rgba(var(--aa-text-color-rgb), var(--aa-text-color-alpha));
   font-family: inherit;
   font-family: var(--aa-font-family);
@@ -181,7 +158,6 @@ html[data-theme='dark'] {
 }
 
 .aa-DetachedFormContainer {
-  border-bottom: 0;
   border-bottom: 1px solid rgba(var(--aa-panel-border-color-rgb), var(--aa-panel-border-color-alpha));
   display: flex;
   flex-direction: row;
@@ -314,6 +290,14 @@ html[data-theme='dark'] {
     font-size: 14px;
     line-height: 1.7;
     color: var(--heading-font-color);
+}
+
+.aa-Item[aria-selected=true] .hit-desc {
+  color: inherit;
+}
+
+.aa-Item[aria-selected=true] .aa-ItemContent mark {
+  border-color: inherit;
 }
 
 @media screen and (max-width: 680px) {
