--- a/ui/src/css/extensions/algolia/theme.css
+++ b/ui/src/css/extensions/algolia/theme.css
@@ -57,24 +57,6 @@
   }
 }
 
-body.dark,
-body[data-theme=dark],
-html[data-theme='dark'] {
-  --aa-text-color-rgb: 183, 192, 199;
-  --aa-primary-color-rgb: 146, 138, 255;
-  --aa-muted-color-rgb: 146, 138, 255;
-  --aa-input-background-color-rgb: 0, 3, 9;
-  --aa-background-color-rgb: 21, 24, 42;
-  --aa-selected-color-rgb: 146, 138, 255;
-  --aa-selected-color-alpha: 0.25;
-  --aa-description-highlight-background-color-rgb: 0 255 255;
-  --aa-description-highlight-background-color-alpha: 0.25;
-  --aa-icon-color-rgb: 119, 119, 163;
-  --aa-panel-shadow: inset 1px 1px 0 0 #2c2e40, 0 3px 8px 0 #000309;
-  --aa-scrollbar-track-background-color-rgb: 44, 46, 64;
-  --aa-scrollbar-thumb-background-color-rgb: var(--aa-background-color-rgb)
-}
-
 .aa-Autocomplete *,
 .aa-DetachedFormContainer *,
 .aa-Panel * {
@@ -885,7 +867,7 @@ html[data-theme='dark'] {
   margin: var(--aa-spacing-half) 0 var(--aa-spacing-half) 2px
 }
 
-.aa-DetachedContainer .aa-Panel {
+.aa-Panel {
   background-color: #fff;
   background-color: rgba(var(--aa-background-color-rgb), var(--aa-background-color-alpha));
   border-radius: 0;
